# src

./: .gitignore  README.md  camera_params.txt
calib/: CameraCalibration.cpp  CameraCalibration.h  calib_node.cpp
cpp_aruco_detect/camera_calibration/: CMakeLists.txt  camera_params.xml  camera_params.yml  main.cpp
cpp_aruco_detect/video_capture/: CMakeLists.txt  main.cpp
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/cfg/: video_input.cfg
pose_estimation/include/fiducial_positioning_system/: FiducialPositioningSystem.h
pose_estimation/include/pose_estimation/: camera.h
pose_estimation/src/: FiducialPositioningSystem.cpp  camera.cpp  fid_ps_node.cpp  t.cpp
